fix(more btn): fix more btn align middle

--- a/src/css/iconCustom.css
+++ b/src/css/iconCustom.css
@@ -19,6 +19,8 @@
 #luckysheet-icon-morebtn{
     position: absolute;
     right: 15px;
+    transform: translate(0,-50%);
+    top: 50%;
 }
 
 
